--- a/7.1/index.html
+++ b/7.1/index.html
@@ -10,7 +10,7 @@
 	<script type="module" src="script.js"></script>
 </head>
 <body>
-	
+
 	<header>
 		<h1> JS övningar </h1>
 	</header>
@@ -24,6 +24,8 @@
 				<button id="meat-button"> Kött </button>
 				<button id="fish-button"> Fisk </button>
 				<button id="veg-button"> Vegetarisk </button>
+				<button> Glutenfritt </button>
+				<button> Extra gluten </button>
 			</p>
 		</section>
 
