--- a/7/index.html
+++ b/7/index.html
@@ -7,7 +7,8 @@
 
 	<link rel="shortcut icon" href="" type="image/x-icon">
 	<link rel="stylesheet" href="style.css">
-	<script type="module" src="script.js"></script>
+	<script type="module" src="7.1.js"></script>
+	<script type="module" src="7.2.js"></script>
 </head>
 <body>
 
