--- a/7/index.html
+++ b/7/index.html
@@ -7,8 +7,10 @@
 
 	<link rel="shortcut icon" href="" type="image/x-icon">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="7.4.css">
 	<script type="module" src="7.1.js"></script>
 	<script type="module" src="7.2.js"></script>
+	<script type="module" src="7.4.js"></script>
 </head>
 <body>
 
@@ -17,8 +19,10 @@
 	</header>
 	<main>
 
+		<!-- 7.1 -->
 		<section class="dynamic"></section>
 
+		<!-- 7.2 -->
 		<section>
 			<p> <strong> Välj ett matalternativ </strong> </p>
 			<p class="button-row food">
@@ -33,6 +37,30 @@
 		<section>
 			<button id="add-button"> Lägg till </button>
 			<ul id="add-list"></ul>
+		</section>
+
+		<!-- 7.4 -->
+		<section class="radio">
+			<h2> Välj radiokanal </h2>
+			<div class="row">
+			<label>
+				<input type="radio" name="channel" id="radio-p1" value="P1" />
+				P1
+			</label>
+			<label>
+				<input type="radio" name="channel" id="radio-p2" value="P2" />
+				P2
+			</label>
+			<label>
+				<input type="radio" name="channel" value="P3" />
+				P3
+			</label>
+			<label>
+				<input type="radio" name="channel" value="P4" />
+				P4
+			</label>
+			</div>
+			<p> Du lyssnar inte på någon kanal. </p>
 		</section>
 
 	</main>
