--- a/7/index.html
+++ b/7/index.html
@@ -8,9 +8,11 @@
 	<link rel="shortcut icon" href="" type="image/x-icon">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="7.4.css">
+	<link rel="stylesheet" href="7.5.css">
 	<script type="module" src="7.1.js"></script>
 	<script type="module" src="7.2.js"></script>
 	<script type="module" src="7.4.js"></script>
+	<script type="module" src="7.5.js"></script>
 </head>
 <body>
 
@@ -43,24 +45,34 @@
 		<section class="radio">
 			<h2> Välj radiokanal </h2>
 			<div class="row">
-			<label>
-				<input type="radio" name="channel" id="radio-p1" value="P1" />
-				P1
-			</label>
-			<label>
-				<input type="radio" name="channel" id="radio-p2" value="P2" />
-				P2
-			</label>
-			<label>
-				<input type="radio" name="channel" value="P3" />
-				P3
-			</label>
-			<label>
-				<input type="radio" name="channel" value="P4" />
-				P4
-			</label>
+				<label>
+					<input type="radio" name="channel" id="radio-p1" value="P1" />
+					P1
+				</label>
+				<label>
+					<input type="radio" name="channel" id="radio-p2" value="P2" />
+					P2
+				</label>
+				<label>
+					<input type="radio" name="channel" value="P3" />
+					P3
+				</label>
+				<label>
+					<input type="radio" name="channel" value="P4" />
+					P4
+				</label>
 			</div>
 			<p> Du lyssnar inte på någon kanal. </p>
+		</section>
+
+		<!-- 7.5 -->
+		<section class="hide-show-container">
+			<p> DOM-manipulation med JavaScript </p>
+			<div class="row">
+				<button id="more-button" disabled> Visa mer info </button>
+				<button id="less-button"> Dölj info </button>
+			</div>
+			<p id="hide-show-content"> Här kommer massa något mindre viktig information. </p>
 		</section>
 
 	</main>
