--- a/7/index.html
+++ b/7/index.html
@@ -9,10 +9,12 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="7.4.css">
 	<link rel="stylesheet" href="7.5.css">
+	<link rel="stylesheet" href="demo.css">
 	<script type="module" src="7.1.js"></script>
 	<script type="module" src="7.2.js"></script>
 	<script type="module" src="7.4.js"></script>
 	<script type="module" src="7.5.js"></script>
+	<script type="module" src="demo.js"></script>
 </head>
 <body>
 
@@ -73,6 +75,25 @@
 				<button id="less-button"> Dölj info </button>
 			</div>
 			<p id="hide-show-content"> Här kommer massa något mindre viktig information. </p>
+		</section>
+
+		<section class="children">
+			<button id="style-button"> Byt stil </button>
+			<ul class="row">
+				<li> första </li>
+				<li> andra </li>
+				<li> tredje </li>
+			</ul>
+		</section>
+
+		<section class="stop">
+			<div class="container" id="c1">
+				<div class="container"  id="c2">
+					<div class="container"  id="c3">
+						<button  id="c4"> Klicka mig </button>
+					</div>
+				</div>
+			</div>
 		</section>
 
 	</main>
